--- a/src/CodeValidationGUI.form
+++ b/src/CodeValidationGUI.form
@@ -30,7 +30,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <EmptySpace pref="260" max="32767" attributes="0"/>
+              <EmptySpace pref="300" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="codeEntry" min="-2" max="-2" attributes="0"/>
@@ -39,7 +39,7 @@
                   </Group>
                   <Component id="SchoolLogo" alignment="0" min="-2" pref="241" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="354" max="32767" attributes="0"/>
+              <EmptySpace pref="300" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
@@ -73,11 +73,13 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SubmitActionPerformed"/>
       </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="Submit.setForeground(Color.BLACK);&#xa;Submit.setBackground(Color.WHITE);"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JTextField" name="codeEntry">
       <Properties>
         <Property name="text" type="java.lang.String" value="Enter your 6 digit code"/>
-        <Property name="opaque" type="boolean" value="true"/>
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="codeEntryMouseClicked"/>
@@ -91,6 +93,9 @@
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="quitMouseClicked"/>
       </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="quit.setForeground(Color.BLACK);&#xa;quit.setBackground(Color.WHITE);"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="SchoolLogo">
       <Properties>
